edit page to submit button

--- a/index.html
+++ b/index.html
@@ -26,13 +26,92 @@
 			<li>item</li>
 		</ul>
 	</aside>
-	<article>Titulo del articulo</article>
+	<h2>Titulo del articulo</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	
+	<h3>Titulo del sección</h3>
+		<p>Que estas pensando hijo de puta? Tu crees que no puedo dejar chocolate flaite conchtumadre?Que estas pensando hijo de puta? Tu crees que no puedo dejar chocolate flaite conchtumadre?Que estas pensando hijo de puta? Tu crees que no puedo dejar chocolate flaite conchtumadre?</p>
+
+
+		<table>
+		<tr>
+			<th>Qué</th>
+			<th>Donde</th>
+			<th>Como</th>
+		</tr>
+		<tr>
+			<td>HTML</td>
+			<td>Ya tu sabe donde washo!</td>
+			<td>
+				<button type="button">Vamos!</button>
+			</td>
+		</tr>
+		<tr>
+			<td>CSS</td>
+			<td>Me parece tonto?</td>
+			<td>
+				<button type="button">Andale!</button>
+			</td>
+		</tr>
+		<tr>
+			<td>JS</td>
+			<td>Basta la wea!</td>
+			<td>
+				<button type="button">Eeeeepa!</button>
+			</td>
+		</tr>
+	</table>
+
+	<p>Oye washo! Porque no andas por aca y deja las tonterias pendejo.Oye washo! Porque no andas por aca y deja las tonterias pendejo.Oye washo! Porque no andas por aca y deja las tonterias pendejo.</p>
+
+	<h3>Titulo del sección</h3>
+
+	<p>Andai con el perro atropellao? Que zarpa conchetumadre! Soy flaite conchetumadre! La marijuana me deja los ojos rojos 'po loco!Soy flaite conchetumadre! La marijuana me deja los ojos rojos 'po loco!</p>
+
+	<pre class="code-box">var puto = function {
+	pendejo + boludo + hijodeputa;
+	}
+	</pre>
+	<p>Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!</p>
+	<p>Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!</p>
+
+	<h3>Titulo del sección</h3>
+
+	<p>Weon! No vai por alli weon! Sta peligroso por alli, te sacan el medio fierro por la espada.Weon! No vai por alli weon! Sta peligroso por alli, te sacan el medio fierro por la espada.</p>
+
+	<img class="placeholdimg" src="http://placehold.it/650x150">
+
+	<ol>
+		<li><strong>Crea HTML:</strong> para crear algo en HMTL, uno necesita hacer nada mas que poner los cojones en la mesa y escribir una wea con una programa de text.</li>
+		<li><strong>Hacerlo bonito con CSS:</strong> con rosas y flores y arboles y plantas y toda esa mierda hermosa.</li>
+		<li><strong>Lucro:</strong> lucas y lucas y lucas y mistrals.</li>
+	</ol>
+	<p>Hecho por <strong>Autor</strong> bajo <strong>Red > Des</strong> en <strong>13 de enero, 2014.</strong></p>
+
+	<h1>Comentarios</h1>
+
+	 <form>
+ 		<fieldset class="separator">
+	  		<legend>INFO DEL USARIO</legend>
+	  		Email <input type="text"><br>
+	  		Usario <input type="text"><br>
+	  		sitio de red <input type="text">
+	 	</fieldset>
+	</form>
+
+	<fieldset class="separator">
+		<legend>MENSAJE</legend>
+	</fieldset>
+
+	<textarea class="commentbox" rows="10" cols="70"></textarea>
+
+	<button class="fullbtn" type="button">Hecho</button>
+
 	</div>
 	
 
