editing CSS in progress...

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="back-background">
 	<div class="main-block">
-	<header class="header">
+	<header class="mainheader">
 		<h1>My Website</h1>
 	</header>
 	<nav>
@@ -26,7 +26,7 @@
 			<li>item</li>
 		</ul>
 	</aside>
-	<h2>Titulo del articulo</h2>
+	<h2 class="headers">Titulo del articulo</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -34,7 +34,7 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	
-	<h3>Titulo del sección</h3>
+	<h3 class="subheaders">Titulo del sección</h3>
 		<p>Que estas pensando hijo de puta? Tu crees que no puedo dejar chocolate flaite conchtumadre?Que estas pensando hijo de puta? Tu crees que no puedo dejar chocolate flaite conchtumadre?Que estas pensando hijo de puta? Tu crees que no puedo dejar chocolate flaite conchtumadre?</p>
 
 
@@ -69,7 +69,7 @@
 
 	<p>Oye washo! Porque no andas por aca y deja las tonterias pendejo.Oye washo! Porque no andas por aca y deja las tonterias pendejo.Oye washo! Porque no andas por aca y deja las tonterias pendejo.</p>
 
-	<h3>Titulo del sección</h3>
+	<h3 class="subheaders">Titulo del sección</h3>
 
 	<p>Andai con el perro atropellao? Que zarpa conchetumadre! Soy flaite conchetumadre! La marijuana me deja los ojos rojos 'po loco!Soy flaite conchetumadre! La marijuana me deja los ojos rojos 'po loco!</p>
 
@@ -80,7 +80,7 @@
 	<p>Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!</p>
 	<p>Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!Helado por cien! Hay fresa, coco, y chocolate!</p>
 
-	<h3>Titulo del sección</h3>
+	<h3 class="subheaders">Titulo del sección</h3>
 
 	<p>Weon! No vai por alli weon! Sta peligroso por alli, te sacan el medio fierro por la espada.Weon! No vai por alli weon! Sta peligroso por alli, te sacan el medio fierro por la espada.</p>
 
@@ -93,14 +93,18 @@
 	</ol>
 	<p>Hecho por <strong>Autor</strong> bajo <strong>Red > Des</strong> en <strong>13 de enero, 2014.</strong></p>
 
-	<h1>Comentarios</h1>
+	<h2 class="headers">Comentarios</h2>
 
 	 <form>
  		<fieldset class="separator">
 	  		<legend>INFO DEL USARIO</legend>
-	  		Email <input type="text"><br>
-	  		Usario <input type="text"><br>
-	  		sitio de red <input type="text">
+	  			<div class="inpbox-out">
+			  		<div class="inpbox-in">
+			  		<label>Email</label><input type="text"><br>
+			  		<label>Usario</label><input type="text"><br>
+			  		<label>sitio de red</label><input type="text">
+			  		</div>
+		  		</div>
 	 	</fieldset>
 	</form>
 
