editing CSS in progress...still

--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
 	<header class="mainheader">
 		<h1>My Website</h1>
 	</header>
-	<nav>
+	<nav class="nav-outer">
 		<ul>
-			<li>Inicio</li>
-			<li>Todos los temas</li>
 			<li>Cerca de nosotros</li>
+			<li>Todos los temas</li>
+			<li>Inicio</li>
 		</ul>
 	</nav>
 	
 	<aside>
 		<ul>
-			<li>item</li>
-			<li>item</li>
-			<li>item</li>
+			<li class="asideheader"><strong>titulo</strong></li>
+				<li>item</li>
+				<li>item</li>
+				<li>item</li>
+			<li class="asideheader"><strong>titulo</strong></li>
+				<li>item</li>
+				<li>item</li>
+				<li>item</li>
 		</ul>
 	</aside>
 	<h2 class="headers">Titulo del articulo</h2>
